Fix: Prevent image overflow

--- a/static/scss/generic/_generic.scss
+++ b/static/scss/generic/_generic.scss
@@ -82,3 +82,8 @@ blockquote {
     background-size: contain;
   }
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
